force-app/main/default/objects/Activity_Listing__c/Activity_Listing__c.object-meta.xml
<CustomObject>
    <label>Activity Listing</label>
    <nameField>
        <label>Activity Listing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Activities Listing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>