force-app/main/default/objects/Activity_Listing__c/fields/Accessible_to_wheel_chair__c.field-meta.xml
<CustomField>
    <fullName>Accessible_to_wheel_chair__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accessible to wheel chair</label>
    <type>Checkbox</type>
</CustomField>