force-app/main/default/objects/Activity_Listing__c/fields/Cordinates__c.field-meta.xml
<CustomField>
    <fullName>Cordinates__c</fullName>
    <label>Cordinates</label>
    <scale>0</scale>
    <type>Location</type>
</CustomField>