force-app/main/default/objects/Activity_Listing__c/fields/max_price__c.field-meta.xml
<CustomField>
    <fullName>max_price__c</fullName>
    <label>max price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>