force-app/main/default/objects/Activity_Listing__c/fields/Min_age__c.field-meta.xml
<CustomField>
    <fullName>Min_age__c</fullName>
    <label>Min age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>