force-app/main/default/objects/Activity_Listing__c/fields/min_price__c.field-meta.xml
<CustomField>
    <fullName>min_price__c</fullName>
    <label>min price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>