force-app/main/default/objects/Activity_Listing__c/fields/Place__c.field-meta.xml
<CustomField>
    <fullName>Place__c</fullName>
    <label>Place</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>