force-app/main/default/objects/Activity_Listing__c/fields/Time_required__c.field-meta.xml
<CustomField>
    <fullName>Time_required__c</fullName>
    <description>Time in Hours</description>
    <inlineHelpText>Time in Hours</inlineHelpText>
    <label>Time required</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>