force-app/main/default/objects/Activity_Listing__c/fields/Weekdays_open__c.field-meta.xml
<CustomField>
    <fullName>Weekdays_open__c</fullName>
    <label>Weekdays open</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SUNDAY</fullName>
            </value>
            <value>
                <fullName>MONDAY</fullName>
            </value>
            <value>
                <fullName>TUESDAY</fullName>
            </value>
            <value>
                <fullName>WEDNESDAY</fullName>
            </value>
            <value>
                <fullName>THURSDAY</fullName>
            </value>
            <value>
                <fullName>FRIDAY</fullName>
            </value>
            <value>
                <fullName>SATURDAY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>