force-app/main/default/objects/Activity_Listing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Place__c</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Time__c</columns>
    <columns>Time_required__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>